@@ -1,0 +1,1 @@
+ostack-lsb-base= lsb-base  (>= 3.0-6)
