@@ -1,0 +1,9 @@
+description "Keystone API server"
+author "Soren Hansen <soren@linux2go.dk>"
+
+start on (local-filesystems and net-device-up IFACE!=lo)
+stop on runlevel [016]
+
+respawn
+
+exec su -s /bin/sh -c "exec keystone-all" keystone
