@@ -1,0 +1,12 @@
+.TH keystone 8
+.SH NAME
+keystone-import \- import users, tenants, and EC2 credentials from nova.
+.SH SYNOPSIS
+.I [OPTION]...
+.SH DESCRIPTION
+.BR keystone is a Python implementation of the Openstack
+identity service.
+.SH FILES
+.IR /etc/keystone/keystone.conf
+.SH AUTHOR
+This manual page was written by Chuck Short <zulcss@ubuntu.com>.
