@@ -1,4 +1,3 @@
 version=3
-http://launchpad.net/keystone/+download http://launchpad.net/keystone/.*/keystone-(.*)\.tar\.gz
-http://keystone.openstack.org/tarballs/ keystone-(.*).tar.gz
-
+opts="uversionmangle=s/%7E/~/" https://launchpad.net/keystone/+download https://launchpad.net/keystone/.*/.*/.*/keystone-(.*)\.tar\.gz
+http://tarballs.openstack.org/keystone/ keystone-(\d.*).tar.gz
